# dehydrated

./: LICENSE  README.md  main.py  pyproject.toml
containers/: test-ssh.Dockerfile
dehydrated/: __init__.py  as_file.py  error.py  run.py
dehydrated/modules/: __init__.py  base.py  http.py  https.py  ssh.py
